Correct text align

--- a/src/main/webapp/WEB-INF/resources/css/main-button.css
+++ b/src/main/webapp/WEB-INF/resources/css/main-button.css
@@ -4,8 +4,12 @@
 	text-decoration: none;
 	font-size: 20px;
 	color: white;
+	
+	padding: 5px;
+	border-right: 1px solid white;
 }
 
 .main-button.--nav {
 	font-size: 10px;
+	border: none;
 }
